src/test/ui/parser/keyword-where-as-identifier.stderr
error: expected identifier, found keyword `where`
  --> $DIR/keyword-where-as-identifier.rs:4:9
   |
LL |     let where = "foo";
   |         ^^^^^ expected identifier, found keyword
help: you can escape reserved keywords to use them as identifiers
   |
LL |     let r#where = "foo";
   |         ^^^^^^^

error: aborting due to previous error

